[tool.poetry]
name = "heimdallr"
version = "v1.2.4"
description = ""
authors = ["Leslie Leung <lesily9@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
requests = "^2.31.0"
python-multipart = "^0.0.9"
environs = "^10.3.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.0.0"
isort = "^5.13.2"
autoflake = "^2.2.1"
memray = "^1.11.0"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
